# programming-study

./: .gitignore  .gitmodules  LICENSE  README.md  mcp-servers.json  package-lock.json  pyproject.toml
aws_lambda/lambda_echo/: README.md  build.sbt
aws_sagemaker/sagemaker_jparacrawl/: .gitignore  Dockerfile  sagemaker_jparacrawl.ipynb  sagemaker_jparacrawl.md
aws_sagemaker/sagemaker_jparacrawl_mecab/: .dockerignore  .gitignore  Untitled.ipynb  vocab_en_ja.yml
aws_sagemaker/sagemaker_mnist/: README.md  mnist.ipynb
computational-physics-prob-solv-w-python-3rd/: .gitignore
ctranslate2_docker/: Dockerfile  README.md
docs/: acm_certificate_validation.md
functional_domain_modeling_in_java/: .gitignore  CLAUDE.md  README.md  pom.xml
hello-assistant-ui/: package-lock.json  package.json  pnpm-lock.yaml
hello-spring-ai/: pom.xml
introduction-keycloak-2nd/: README.md
lean-saas-tech/: .gitignore
life-game/: build.sbt
maze-pic/: pom.xml
mcp-server-tf-module-versions/: .gitignore  pyproject.toml
raspberrypi_room_condition/: measure_room_condition  measure_room_condition.py
ray_tracing_in_one_weekend/: README.md  build.sbt
serverless-websockets-chat/: .gitignore  README.md  package.json  serverless.yml
slam/: README.md  build.sbt
terraform/: README.md  argocd.tf  argocd_applications.tf  main.tf  outputs.tf  providers.tf  variables.tf
unleash-client-demo/: Dockerfile  docker-compose.yml  package-lock.json  package.json
unleash-demo/: pom.xml
visualizing-quantum-mechanics/: .gitignore  README.md  main.py  pyproject.toml  vpython_sample.py
(+91 files in other folders)
